# libreyolo

./: .env.example  .gitignore  CONTRIBUTING.md  DOCS.md  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_NOTICES.txt  example.py  pyproject.toml  readme.md  setup.py  test.py  train.py
.github/workflows/: docs.yml  publish.yml
docs/: fine_tuning.md  model_layers.md  user_guide.md
docs_sphinx/: .readthedocs.yaml  Makefile  conf.py  explainability.md  finetuning.md  getting-started.md  index.md  inference.md  model-architecture.md  requirements.txt  training.md  validation.md  yolox.md
docs_sphinx/_build/html/: .buildinfo  explainability.html  genindex.html  getting-started.html  index.html  inference.html  objects.inv  search.html  searchindex.js  training.html
docs_sphinx/_static/: .gitkeep
docs_sphinx/api/: index.md
examples/: auto_download.py  compare_all_models.py  export_onnx.py  export_yolo11_onnx.py  export_yolo8_onnx.py  infer_onnx.py  infer_yolo11_onnx.py  infer_yolo8_onnx.py  libreyolo11_example.ipynb  libreyolo8_example.ipynb  libreyolox.py  run_rtdtr_inference.py  run_yolo11_inference.py  run_yolo8_inference.py  run_yolo_rd_inference.py  run_yolov7_inference.py  run_yolov9_inference.py  save_yolo11_activations.py  save_yolo8_activations.py  simple_yolo11.py  simple_yolo8.py  simple_yolo8_feature_maps.py
libreyolo/: __init__.py  factory.py  libreyolo.py  libreyolo11.py  libreyolo8.py  model.py  model11.py  model8.py  utils.py  utils11.py  utils8.py
libreyolo/backends/: __init__.py  base.py  ncnn.py  onnx.py  openvino.py  tensorrt.py
libreyolo/cfg/: __init__.py
libreyolo/cfg/datasets/: coco-val-only.yaml  coco.yaml  coco128.yaml  coco5000.yaml  coco8.yaml
libreyolo/cfg/export/: tensorrt_default.yaml
libreyolo/common/: base_model.py  eigen_cam.py  image_loader.py  ncnn.py  onnx.py  openvino.py  results.py  tensorrt.py  utils.py
libreyolo/common/cam/: __init__.py  activations.py  base.py  eigen_cam.py  eigengradcam.py  gradcam.py  gradcampp.py  hirescam.py  layercam.py  xgradcam.py
libreyolo/common/postprocessing/: __init__.py  base.py  box_utils.py  diou_nms.py  nms.py  soft_nms.py
libreyolo/dabdetr/: __init__.py  attention.py  backbone.py  box_ops.py  config.py  loss.py  model.py  nn.py  trainer.py  utils.py  validator.py
libreyolo/data/: __init__.py  dataset.py  utils.py  yolo_coco_api.py
libreyolo/export/: __init__.py  calibration.py  config.py  exporter.py  ncnn.py  onnx.py  openvino.py  tensorrt.py  tensorrt_export.py  torchscript.py
libreyolo/inference/: ncnn.py  onnx.py  openvino.py  tensorrt.py
libreyolo/models/: __init__.py  base.py
libreyolo/rd/: __init__.py  model.py  nn.py  utils.py
libreyolo/rfdetr/: __init__.py  model.py  nn.py  train.py  utils.py
libreyolo/rtdetr/: __init__.py  backbone.py  box_ops.py  config.py  denoising.py  loss.py  model.py  nn.py  trainer.py  utils.py  validator.py
libreyolo/training/: __init__.py  augment.py  base_trainer.py  config.py  dataset.py  ema.py  loss.py  scheduler.py  train.py  train_config.yaml  trainer.py
libreyolo/utils/: __init__.py  box_ops.py  download.py  downloads.py  drawing.py  general.py  image_loader.py  results.py
libreyolo/v11/: interface.py  model.py  nn.py  utils.py
libreyolo/v7/: __init__.py  model.py  nn.py  utils.py
libreyolo/v8/: interface.py  model.py  nn.py  utils.py
libreyolo/v9/: __init__.py  config.py  loss.py  model.py  nn.py  trainer.py  transforms.py  utils.py
libreyolo/v9_nms_free/: __init__.py  config.py  loss.py  model.py  nn.py  trainer.py  transforms.py  utils.py
libreyolo/validation/: __init__.py  base.py  coco_evaluator.py  config.py  detection_validator.py  metrics.py  preprocessors.py  utils.py
libreyolo/yolox/: __init__.py  model.py  nn.py  utils.py
model_notebooks/: README.md  libreyolo11.ipynb
neural_networks/: nn_blocks.py
notebooks/: README.md  libreyolo8.ipynb
tests/: README.md  conftest.py  diagnostic_rfdetr.py  run_manual_tests.py
tests/e2e/: RF5_SPEC.md  __init__.py  conftest.py  rf5_datasets.py  run_all.sh  test_ncnn.py  test_onnx.py  test_openvino.py  test_openvino_export.py  test_rf1_training.py  test_rf5_training.py  test_tensorrt.py  test_tensorrt_export.py  test_torchscript.py  test_torchscript_export.py  test_val_coco128.py
tests/integration/: test_coco_validation.py  test_complete_workflow.py  test_conversion.py  test_inference.py  test_rfdetr_training.py
tests/unit/: test_auto_size_detection.py  test_coco_validation.py  test_dabdetr.py  test_export.py  test_export_ncnn.py  test_factory.py  test_image_loader.py  test_predict_contract.py  test_rd_layers.py  test_results.py  test_rfdetr_model.py  test_rtdetr.py  test_utils.py  test_v7_layers.py  test_v9_layers.py  test_validation_metrics.py  test_yolo9_layers.py  test_yolo_coco_api.py
vision_analysis_benchmark/: .gitignore  README.md  benchmark_coco.py  benchmark_yolov9_only.py  coco_benchmark.yaml  requirements.txt  run_all_benchmark.sh  run_full_benchmark.py  run_quick_benchmark.sh  test_simple.py  test_with_val.py
weights/: LICENSE_NOTICE.txt  convert_dabdetr_weights.py  convert_rtdetr_weights.py  convert_yolo11_weights.py  convert_yolo7_weights.py  convert_yolo8_weights.py  convert_yolo9_weights.py  convert_yolo_rd_weights.py  testyolo_s_int8.engine.json
(+53 files in other folders)
