[project]
name = "libreyolo"
version = "0.1.2"
description = "Libre YOLO - An open source YOLO library with MIT license."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LibreYOLO Team"}
]
dependencies = [
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "torch>=1.7.0",
    "torchvision>=0.11.0",
    "PyYAML>=6.0",
    "matplotlib>=3.3.0",
    "requests>=2.25.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "jupyterlab>=4.3.1",
]

[project.optional-dependencies]
convert = [
    "ultralytics"
]
onnx = [
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.16.0",
]
rfdetr = [
    "rfdetr",  # RF-DETR package from Roboflow
    "timm>=0.9.0",
    "supervision>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/Libre-YOLO"
Repository = "https://github.com/Libre-YOLO/libreyolo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["libreyolo*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-m unit"
testpaths = ["tests"]
markers = [
    "unit: fast tests that avoid external weights or large files",
    "integration: slow tests that require converted weights or generate artifacts",
]
