[project]
name = "libreyolo"
version = "0.1.5"
description = "Libre YOLO - An open source YOLO library with MIT license."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LibreYOLO Team"}
]
dependencies = [
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "torch>=1.7.0",
    "torchvision>=0.11.0",
    "PyYAML>=6.0",
    "matplotlib>=3.3.0",
    "requests>=2.25.0",
    "opencv-python>=4.11.0.86",
    "tqdm>=4.65.0",
    "pycocotools>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "jupyterlab>=4.3.1",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.14.0",
    "onnxsim>=0.4.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.16.0",
]
rfdetr = [
    "rfdetr==1.4.1",
    "transformers<5",
    "timm>=0.9.0",
    "supervision>=0.19.0",
]
tensorrt = [
    # TensorRT requires manual installation as it depends on CUDA version
    # Install with: pip install tensorrt (requires NVIDIA GPU + CUDA)
    # For INT8 calibration, also install pycuda:
    # pip install pycuda
    "pycuda>=2022.1",
]
openvino = [
    "openvino>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/Libre-YOLO"
Repository = "https://github.com/Libre-YOLO/libreyolo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
libreyolo = ["assets/*.jpg"]

[tool.setuptools.packages.find]
include = ["libreyolo*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-m unit"
testpaths = ["tests"]
markers = [
    "unit: fast tests that avoid external weights or large files",
    "integration: slow tests that require converted weights or generate artifacts",
    "e2e: end-to-end tests requiring full model loading and inference",
    "tensorrt: tests requiring TensorRT",
    "openvino: tests requiring OpenVINO",
    "rfdetr: tests requiring RF-DETR dependencies",
    "slow: slow tests that may take several minutes",
]
